k8s/popular-slides-spark_start.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: popular-slides-spark
  labels:
    app: popular-slides-spark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: popular-slides-spark
  template:
    metadata:
      labels:
        app: popular-slides-spark
    spec:
      containers:
        - name: popular-slides-spark
          image: farberg/popular-slides-spark
          # Mount the volume that has been populated by the init container
          volumeMounts:
            - name: hadoop-conf-volume
              mountPath: /hadoop-config
      volumes:
        - name: hadoop-conf-volume
          configMap:
            name: popular-slides-spark-hadoop-conf
