k8s/mariadb_start.yaml
#Begin: Service
apiVersion: v1
kind: Service
metadata:
  name: my-app-mariadb-service
spec:
  selector:
    app: my-mariadb
  ports:
    - name: mariadb-proto
      protocol: TCP
      port: 3306
      targetPort: 3306
#End: Service
